Fix submit styling on mobile

--- a/style.css
+++ b/style.css
@@ -474,6 +474,7 @@ input[type=submit]{
 	border-top: 2px solid rgba(255,255,255, 1);
 	border-left: 2px solid rgba(255,255,255, 1);
 	margin-top: .8rem;
+	-webkit-appearance: none;
 }
 
 input[type=submit]:focus, input[type=submit]:active{
